# sizu

./: 11.py  Odometry与TF关系图.md  README  auto_start.sh  fix_network_issue.sh  gpio_trigger.py  imu.py  log.txt  port_trigger.py  position_listener.py  quaternion_calculator.py  save_map_listener.py  start_all_listeners.sh  start_save_map_listener.sh  tuiliu.py  upload_map_ftp.py  修改总结.md  前端场景分离验证.md  启动流程分析.md  地图切换机制分析报告.md  地图切换问题排查指南.md  坐标系可靠性分析.md  坐标系统一修复说明.md  多地图点管理修复总结.md  网络配置说明.md
httpcopy/: CMakeLists.txt  README.md  check_network.sh  main.cpp  map_converter.py  map_switcher.cpp  peizhi.html
httpcopy/include/: ftp_server.h  socket.h
httpcopy/include/network/: errorNum.hpp  frame.hpp  moduleObj.hpp  netWorkBase.hpp  tcpUdp.hpp
httpcopy/src/: ftp_server.cpp
httpcopy/src/network/: networkBase.cpp  socket.cpp  tcpUdp.cpp
src/FAST_LIO_GLOBAL/PCD/: scans.pgm  scans.yaml  scans_507_in.yaml  scans_507_out.yaml
src/FAST_LIO_GLOBAL/include/: common_lib.h
src/FAST_LIO_GLOBAL/launch/: Pointcloud2Map.launch  mapping_mid360.launch
src/FAST_LIO_GLOBAL/rviz_cfg/: lio_global.rviz
src/FAST_LIO_GLOBAL/src/: IMU_Processing.hpp  laserMapping.cpp
src/goalsender/: CMakeLists.txt  laddar_server_mock.cpp  package.xml  position_server_mock.cpp  position_server_newdevice.cpp  ros_goal_sender.cpp
src/goalsender/include/: data_type.h  laddar_server_newdevice.hpp  position_server_newdevice.hpp
src/goalsender/include/network/: deviceBase.hpp  errorNum.hpp  frame.hpp  moduleObj.hpp
src/goalsender/launch/: goal_sender.launch  laddar_server_mock.launch  laddar_server_newdevice.launch  position_server_mock.launch  position_server_newdevice.launch
src/goalsender/path_control/: dianti.xml  sanju.xml  test.cpp  test.xml  test1.xml
src/goalsender/path_control/astar/: README.md  a_star.cpp  a_star.hpp
src/goalsender/path_control/include/: deviceBase.hpp  elevator_controller.hpp  errorNum.hpp  frame.hpp  laddar_device.hpp  map_switch.hpp  netWorkBase.hpp  octi_xml.hpp  robot_control.hpp  robot_elevator_client.hpp  send.hpp
src/goalsender/path_control/include/localPlanner/: octi_dwa.hpp
src/goalsender/path_control/main_control/: main_control.cpp  main_control.hpp
src/goalsender/path_control/map/: 2dmap.pgm  2dmap.yaml
src/goalsender/path_control/pgm/: README.md  pgm.cpp  pgm.hpp
src/goalsender/path_control/speaker/: speaker.cpp  speaker.hpp  speaker_test.cpp
src/goalsender/path_control/src/charge/: octi_charge.cpp
src/goalsender/path_control/src/dwa/: dwa.cpp
src/goalsender/path_control/src/elevator_controller/: elevator_controller.cpp
src/goalsender/path_control/src/lad/: laddar_device.cpp
src/goalsender/path_control/src/map_switch/: map_switch.cpp
src/goalsender/path_control/src/network/: deviceBase.cpp  networkBase.cpp  tcpUdp.cpp
src/goalsender/path_control/src/octirobot/: octi_robot.cpp
src/goalsender/path_control/src/robot_control/: robot_control.cpp
src/goalsender/path_control/src/robot_elevator_client/: robot_elevator_client.cpp
src/goalsender/path_control/src/sendPoint/: send.cpp
src/goalsender/path_control/src/tinyxml/: tinyxml2.cpp
src/goalsender/path_control/src/xml/: octi_xml.cpp
src/goalsender/path_control/vision/: vision.cpp  vision.hpp  vision_test.cpp
src/goalsender/src/: laddar_server_newdevice.cpp
src/goalsender/src/network/: deviceBase.cpp  networkBase.cpp  tcpUdp.cpp
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
src/livox_ros_driver2/src/: lddc.cpp
src/map_switch/: CMakeLists.txt
src/map_switch/config/: floors.yaml
src/map_switch/include/: map_switch_node.hpp  tf_publish_node.hpp
src/map_switch/include/network/: deviceBase.hpp  frame.hpp  moduleObj.hpp  tcpUdp.hpp
src/map_switch/launch/: project.launch  publish_map2.launch  publish_map4.launch
src/map_switch/scripts/: start_map3.sh  start_map4.sh  start_map5.sh
src/map_switch/src/: backup.cpp  map_switch.cpp  map_switch_node.cpp  tf_publish.cpp  tf_publish_node.cpp
src/map_switch/src/network/: deviceBase.cpp  networkBase.cpp  tcpUdp.cpp
src/pointcloud_to_laserscan/launch/: sample_node.launch  sample_nodelet.launch
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
src/rtsp_stream/: CMakeLists.txt  package.xml
src/rtsp_stream/config/: rtsp_config.yaml
src/rtsp_stream/launch/: map_publisher.launch  mapping_with_rtsp.launch  rtsp_stream.launch
src/rtsp_stream/scripts/: auto_start_listener.sh  start_rtsp_stream.sh  tuiliu.py
src/rtsp_stream/src/: map_rtsp_publisher.cpp  stream_listener.cpp
src/rtsp_stream/web/: index.html  mediamtx.yml
