<?xml version="1.0"?>
<package format="2">
  <name>goal_sender</name>
  <version>1.0.0</version>
  <description>ROS node to send navigation goals via UDP</description>
  
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
